# Agentic-Chess-Coach

./: README.md  pyproject.toml  requirements.txt
agentic_chess_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chess_coach/: __init__.py  cli.py  coach.py  game.py  openings.py  players.py  tools.py  ui.py
tests/: test_game_and_coach.py
